Accessibility and contrast errors fixed

--- a/lesson3/styles/phone.css
+++ b/lesson3/styles/phone.css
@@ -105,6 +105,7 @@
 
   .accent-color-b {
     width: 120px;
+    color: mintcream;
     background-color: #732424;
   }
 
